fixes the issue where the GSM bars are stuck at the right side

--- a/css/videolayout_default.css
+++ b/css/videolayout_default.css
@@ -202,7 +202,7 @@
     position: absolute;
     top: 7px;
     right: 0;
-    padding: 0px 5px;
+    margin: 0px 5px;
     z-index: 3;
     width: 18px;
     height: 13px;
